<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit_product.presentation.EditProductFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/window_background"
            app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/container_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/image_iv"
                android:layout_width="match_parent"
                android:layout_height="213dp"
                android:layout_marginHorizontal="@dimen/content_padding"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_description_product_image"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/content_padding"
                android:layout_marginTop="40dp"
                android:text="@string/label_title"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                style="@style/EditProductTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/content_padding"
                android:layout_marginTop="4dp"
                android:text="@string/label_price"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_layout"
                style="@style/EditProductTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/category_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/content_padding"
                android:layout_marginTop="4dp"
                android:text="@string/label_category"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_layout"
                style="@style/EditProductTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/category_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="text"
                    android:focusable="false"
                    android:imeOptions="actionNext"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/content_padding"
                android:layout_marginTop="4dp"
                android:text="@string/label_description"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_layout"
                style="@style/EditProductTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_btn"
                style="@style/StylishButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/content_padding"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="40dp"
                android:text="@string/button_save"
                android:textAllCaps="false"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/loader_layout"
        layout="@layout/progress_loader" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>