<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".log_in.presentation.LoginFragment">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:textSize="36sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_login_screen_title"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInput"
        android:layout_marginTop="36dp"
        android:hint="@string/hint_email"
        app:startIconDrawable="@drawable/ic_user"
        app:layout_constraintTop_toBottomOf="@id/title_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInput"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_password"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconDrawable="@drawable/ic_eye"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="12sp"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StylishButton"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:text="@string/button_login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:strokeColor="?attr/colorPrimary" />

    <include
        android:id="@+id/loader_layout"
        layout="@layout/progress_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>