<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".product_detail.presentation.ProductDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/window_background"
            app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/container_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/image_iv"
                android:layout_width="match_parent"
                android:layout_height="213dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_description_product_image"
                android:layout_marginHorizontal="@dimen/content_padding"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/content_padding"
                android:layout_marginTop="55dp"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="20sp"
                tools:text="Nike Sneakers" />

            <TextView
                android:id="@+id/category_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginHorizontal="@dimen/content_padding"
                android:textSize="14sp"
                tools:text="Men's clothing" />

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="14sp"
                tools:text="1.5€" />

            <TextView
                android:id="@+id/description_label_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/content_padding"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/label_product_description"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/description_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/truncated_product_description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/content_padding"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="12sp"
                    tools:text="Perhaps the most iconic sneaker of all-time, this original Chicago colorway is the cornerstone to any sneaker collection. Made famous in 1985 by Michael Jordan, the shoe has stood the test of time, becoming the most famous colorway of the Air Jordan 1. This 2015 release saw the..." />

                <TextView
                    android:id="@+id/full_product_description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/content_padding"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:visibility="gone"
                    tools:text="Perhaps the most iconic sneaker of all-time, this original Chicago colorway is the cornerstone to any sneaker collection. Made famous in 1985 by Michael Jordan, the shoe has stood the test of time, becoming the most famous colorway of the Air Jordan 1. This 2015 release saw the..." />

                <TextView
                    android:id="@+id/more_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/content_padding"
                    android:paddingVertical="4dp"
                    android:text="@string/label_more"
                    android:textColor="@color/orange"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/loader_layout"
        layout="@layout/progress_loader" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>